# simple-useful-things

./: .gitignore  0.py  0_.py  CookieBook.py  flash_freespace_placeholder.py  function_args.txt  s.txt  voiceover_downloader_gt.py  which.py
Examples/: ({[]}).py  0.py  Own_context_manager.py  RE_email_ex_9mynod.py  SERIALIZATION+.py  (+41 more)
Examples/asyncio/asyncio1/: asyncduration.py  asynclog.txt  asynclogging.py  chat.py  info.txt  main.css  main.js  main.py  pyproject.toml
Examples/asyncio/asyncio2/: README.md  asyncduration.py  asynclog.txt  asynclogging.py  authentication.py  key.txt  main.py  main0.py  pyproject.toml
Examples/sql/: README.md  assessments.db  connect_to_db_postgresql.py  connect_to_db_sqlite.py  create_tables_sqlite.sql  main_postgresql.py  main_sqlite.py  pyproject.toml  sql_requests_postgresql.py  sql_requests_sqlite.py
Examples/sql/sql_requests_postgresql/: query_1.sql  query_10.sql  query_12+.sql  query_12.sql  query_2.sql  query_4.sql  query_6.sql  query_7.sql  query_8.sql
Examples/sql/sql_requests_sqlite/: query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
Examples/sqlalchemy/: README.md  alembic.ini  authentication.py  config.ini  drop_tables.py  exception_catcher.py  main.py  main_wocli.py  my_select.py  pyproject.toml  seed.py
Examples/sqlalchemy/alembic/: env.py
Examples/sqlalchemy/alembic/versions/: 4fe592d5ed90_init.py  5313009bb792_init.py  541eba179edd_init.py  7d1ec268fef2_init.py
Examples/sqlalchemy/database/: connect_to_db_postgresql.py  models.py
Examples/sqlalchemy/some_example_steps/0/: create_tables_postgresql.sql  main.py  main_crud.py  main_on_core.py  main_sessions.py  test.py
Examples/sqlalchemy/some_example_steps/1/: connect_to_db_postgresql.py  main.py  seed.py
Examples/sqlalchemy/some_example_steps/1/sql_requests_postgresql/: query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_3.sql  query_5.sql  query_9.sql
Examples/sqlalchemy/some_example_steps/2/: main.py  my_select.py
Examples/sqlalchemy/some_example_steps/2.5/: seed copy.py
Examples/sqlalchemy/some_example_steps/2/database/: __init__.py  connect_to_db_postgresql.py  models.py
Examples/sqlalchemy/some_example_steps/2/seeds/: assessments.py  drop_tables.py  groups.py  seedsconfig.py  students.py  subjects.py  teachers.py
Examples/sqlalchemy/some_example_steps/3/m09_07_01/: config.ini  main.py  signup.py
Examples/sqlalchemy/some_example_steps/3/m09_07_01/database/: db.py  models.py  repository.py
(+92 files in other folders)
