[tool.poetry]
name = "example-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Denys Tantsiura <ghost0002501@gmail.com>"]
readme = "README.md"
packages = [{include = "example_sqlalchemy"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.4"
faker = "^17.0.0"
psycopg2 = "^2.9.5"
alembic = "^1.9.4"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
flake8 = "^6.0.0"
black = {extras = ["d"], version = "^23.1.0"}

[tool.black]
line-length = 119
skip-string-normalization = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
