[tool.poetry]
name = "example-asyncio"
version = "0.1.0"
description = ""
authors = ["Denys Tantsiura <ghost0002501@gmail.com>"]
readme = "README.md"
packages = [{include = "example_asyncio"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"
aiofile = "^3.8.1"
requests = "^2.28.2"
aiopath = "^0.6.11"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = {extras = ["d"], version = "^23.1.0"}
flake8 = "^6.0.0"

[tool.black]
line-length = 119
skip-string-normalization = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
